<resources>
    <string name="app_name">App Maths</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_random">Aleatorio</string>
    <string name="aciton_distance">Distancia</string>
    <string name="x2_text">X2</string>
    <string name="x1_text">X1</string>
    <string name="y1_text">Y1</string>
    <string name="y2_text">Y2</string>
    <string name="input_x1">Punto X1</string>
    <string name="input_y1">Punto Y1</string>
    <string name="input_x2">Punto X2</string>
    <string name="input_y2">Punto Y2</string>
    <string name="quadrant_text">CUADRANTE</string>
    <string name="slope_text">PENDIENTE</string>
    <string name="middle_point_text">PUNTO MEDIO</string>
</resources>